--- a/rewrite_rules/smqnw_unblockvip_nobyda.conf
+++ b/rewrite_rules/smqnw_unblockvip_nobyda.conf
@@ -1,3 +1,3 @@
 hostname = ap*.intsig.net,api.m.jd.com
-# 扫描全能王 pro
+# 扫描全能王 from nobyda 
 ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/CamScanner.js
