--- a/all-in-one_profile.conf
+++ b/all-in-one_profile.conf
@@ -340,7 +340,8 @@ https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-bo
 #https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/bdcloud.js
 # testflight
 ^https:\/\/testflight\.apple\.com\/v\d\/(app|account|invite)s\/ url script-analyze-echo-response https://raw.githubusercontent.com/NobyDa/Script/master/TestFlight/TestFlightAccount.js
-
+# BiliBili 解锁1080P高码率+4K畫質(番劇和影視除外)（2022-03-05）@ddgksf2013
+^https?:\/\/app\.bilibili\.com\/x\/v2\/account\/myinfo\? url script-response-body https://codeberg.org/ddgksf2013/Cuttlefish/raw/branch/master/Script/bilibili_json.js
 [task_local]
 # ❌该标签不可全量替换 ；包含个人自动任务，谨慎替换
 # > 请手动添加下面的订阅（流媒体Task订阅集合）
