--- a/rewrite_rules/smqnw_unblockvip_ycdz.conf
+++ b/rewrite_rules/smqnw_unblockvip_ycdz.conf
@@ -1,3 +1,3 @@
-# 扫描全能王 from ycdz
-hostname =ap*.intsig.net,api.m.jd.com
+# 扫描全能王 from 彭于晏
+hostname =ap*.intsig.net
 ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/smqnw.js
