--- a/rewrite_rules/unblock_camscanner.conf
+++ b/rewrite_rules/unblock_camscanner.conf
@@ -1,4 +1,4 @@
-# 扫描全能王 
+# 扫描全能王 貌似都失效了
 hostname =ap*.intsig.net
 #^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/smqnw.js
 ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/CamScanner.js
