--- a/rewrite_rules/unblock_baimiao.conf
+++ b/rewrite_rules/unblock_baimiao.conf
@@ -1,3 +1,3 @@
-# 白描 from 彭于晏
+# 白描 貌似已失效
 hostname= baimiao.uzero.cn
 ^https?:\/\/baimiao\.uzero\.cn\/api\/v\d\.user\/appLaunchWithUser$ url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/baimiao.js
