--- a/rewrite_rules/unblock_caixin.conf
+++ b/rewrite_rules/unblock_caixin.conf
@@ -1,2 +1,3 @@
+#貌似已失效
 hostname =gateway.caixin.com
 ^https?:\/\/gateway\.caixin\.com\/api\/app\-api\/auth\/(validate|validateAudioAuth) url script-request-header https://raw.githubusercontent.com/I-am-R-E/Functional-Store-Hub/Master/CaiXin/Script/CaiXin.js
